# devcon

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  DEPENDENCIES.md  README.md  deny.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build.yml  fuzz.yml  lint.yml  release.yml  test.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/arch_review_stride_20260309/: metadata.json  plan.md  spec.md
conductor/archive/build_source_refactor_20260309/: metadata.json  plan.md  spec.md
conductor/archive/code_inventory_20260228/: metadata.json
conductor/archive/code_review_thorough_20260309/: metadata.json  plan.md
conductor/archive/documentation_assessment_20260309/: plan.md  report.md
conductor/archive/dood_devcontainer_20260228/: metadata.json  plan.md  (+1 more)
conductor/code_styleguides/: rust.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_one_or_many.rs
fuzz/seeds/fuzz_config_parse/: devcontainer.json  devcontainer_image.json
fuzz/seeds/fuzz_one_or_many/: array.json  string.json
src/: audit.rs  error.rs  lib.rs  main.rs  settings.rs
src/commands/: rebuild.rs  start.rs
src/devcontainers/: config.rs  mod.rs  one_or_many.rs  paths.rs  run_args.rs
src/provider/: docker.rs  docker_compose.rs  mod.rs  options.rs  podman.rs  podman_compose.rs  utils.rs
templates/: docker-compose.yml
tests/: branding_test.rs  config_test.rs  integration.rs
tests/fixtures/: devcontainer_invalid.json  devcontainer_minimal.json
(+138 files in other folders)
