[package]
name = "devcont"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Matt Pruitt <matt@guitsaru.com>"]
description = "Runs devcontainer projects."
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "devcont"
path = "src/main.rs"

[lib]
name = "devcont"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
shellexpand = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
directories = "5"
toml = "0.8"
colored = "2"
tinytemplate = "1"
anyhow = "1"
thiserror = "2"
