[package]
name = "devcont-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.devcont]
path = ".."

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_one_or_many"
path = "fuzz_targets/fuzz_one_or_many.rs"
test = false
doc = false
bench = false
